--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12128,3 +12128,39 @@ h1 {
   color: #00ADB5;
 }
 
+.StopoverHeading {
+  font-size: 60px;
+}
+
+.DSN {
+  font-size: 60px;
+  color: white;
+  margin-bottom: 40px !important;
+  margin-left: 10px;
+}
+
+.hpMargin {
+  margin-top: 200px;
+}
+
+.inner-form {
+  background: rgba(0, 0, 0, 0.5);
+  padding: 50px 47px;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  width: 100%;
+  -ms-flex-pack: justify;
+  -webkit-box-pack: justify;
+          justify-content: space-between;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+          align-items: center;
+}
+
+.homeLabels {
+  font-size: 30px;
+  line-height: 1;
+  margin-right: 15px;
+}
+
