--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -39,9 +39,6 @@ h1{
   font-weight: 200;
   margin-bottom: 40px;
 }
-.cPost{
-  color: white;
-}
 
 .white{
   color: white;
@@ -61,10 +58,11 @@ h1{
 .SOColour{
   color: #00ADB5;
 }
-.StopoverHeading{
-  font-size: 60px;
-}
 .DSN{
+  font-size: 60px;
+  color: rgb(204, 204, 204);
+}
+.StopoverHeading{
     font-size: 60px;
     color: white;
     margin-bottom: 40px !important;
