--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -59,14 +59,16 @@ h1{
   color: #00ADB5;
 }
 .DSN{
-  font-size: 60px;
+  font-size: 2rem;
   color: rgb(204, 204, 204);
+  display: inline-block;
 }
 .StopoverHeading{
-    font-size: 60px;
+    font-size: 3rem;
     color: white;
     margin-bottom: 40px !important;
     margin-left: 10px;
+    display: inline-block;
 }
 .hpMargin{
     margin-top: 200px;
@@ -83,7 +85,7 @@ h1{
   align-items: center;
 }
 .homeLabels{
-  font-size: 30px;
+  font-size: 1.1rem;
   line-height: 1;
   margin-right: 15px;
 }
