--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12005,6 +12005,31 @@ a.text-dark:focus {
   border-radius: 0 !important;
 }
 
+input[type=date]::-webkit-inner-spin-button {
+  -webkit-appearance: none !important;
+  display: none !important;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: rgba(0, 0, 0, 0);
+  opacity: 1;
+  display: block;
+  background: url(https://mywildalberta.ca/images/GFX-MWA-Parks-Reservations.png) no-repeat;
+  width: 20px;
+  height: 20px;
+  border-width: thin;
+}
+
+.dropdown-item {
+  color: #ffffff !important;
+}
+
+.home-login:focus {
+  border-color: #ff80ff !important;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
+}
+
 .J-margin {
   margin-top: 80px;
 }
@@ -12039,6 +12064,7 @@ a.text-dark:focus {
 
 .tertiaryColor {
   background-color: #00ADB5;
+  border-color: #00ADB5 !important;
 }
 
 .TCO {
@@ -12050,10 +12076,6 @@ h1 {
   font-family: 'Nunito', sans-serif;
   font-weight: 200;
   margin-bottom: 40px;
-}
-
-.white {
-  color: white;
 }
 
 .borderLeft {
