--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -2,6 +2,27 @@
   border-radius: 0 !important;
 }
 
+input[type=date]::-webkit-inner-spin-button {
+  -webkit-appearance: none !important;
+  display: none !important;
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  color: rgba(0, 0, 0, 0);
+  opacity: 1;
+  display: block;
+  background: url(https://mywildalberta.ca/images/GFX-MWA-Parks-Reservations.png) no-repeat;
+  width: 20px;
+  height: 20px;
+  border-width: thin;
+}
+
+.home-login:focus {
+  border-color: #ff80ff !important;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
+}
+
 .J-margin{
   margin-top: 80px;
 }
@@ -28,7 +49,7 @@
 }
 .tertiaryColor{
   background-color: #00ADB5;
-}
+  border-color: #00ADB5 !important;}
 .TCO{
   background-color: rgba(0,173,181, 0.5);
 
@@ -40,9 +61,6 @@ h1{
   margin-bottom: 40px;
 }
 
-.white{
-  color: white;
-}
 .borderLeft{
   border-left: 2px solid #636b6f;
 }
