--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12020,10 +12020,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-width: thin;
 }
 
-.dropdown-item {
-  color: #ffffff !important;
-}
-
 .home-login:focus {
   border-color: #ff80ff !important;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
@@ -12134,5 +12130,14 @@ h1 {
   font-size: 1.1rem;
   line-height: 1;
   margin-right: 15px;
+}
+
+.dropdown-item:hover {
+  background-color: rgba(0, 173, 181, 0.5);
+  color: black;
+}
+
+.dropdown-item {
+  color: white;
 }
 
