--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -7,12 +7,6 @@ input[type=date]::-webkit-inner-spin-button {
   display: none !important;
 }
 
-.home-login:focus {
-  border-color: #ff80ff !important;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(255, 100, 255, 0.5) !important;
-}
-
 .J-margin{
   margin-top: 80px;
 }
@@ -90,7 +84,7 @@ h1{
     display: inline-block;
 }
 .hpMargin{
-    margin-top: 200px;
+    margin-top: 7rem;
 }
 .inner-form{
   background: rgba(0,0,0,.5);
