--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12005,6 +12005,35 @@ a.text-dark:focus {
   border-radius: 0 !important;
 }
 
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+input {
+  color: #fff !important;
+  background: rgba(0, 0, 0, 0) !important;
+}
+
+select {
+  color: #fff !important;
+  background: rgba(0, 0, 0, 0) !important;
+}
+
+select option {
+  background-color: black !important;
+  color: #fff !important;
+}
+
 input[type=date]::-webkit-inner-spin-button {
   -webkit-appearance: none !important;
   display: none !important;
@@ -12012,6 +12041,10 @@ input[type=date]::-webkit-inner-spin-button {
 
 .btn-success a {
   color: #fff !important;
+}
+
+.btn-submit:hover {
+  color: #00ADB5 !important;
 }
 
 .J-margin {
@@ -12039,11 +12072,23 @@ input[type=date]::-webkit-inner-spin-button {
 }
 
 .secondaryColor {
-  background-color: #2b2e35;
+  background-color: rgba(43, 46, 53, 0.5);
 }
 
 .SCO {
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.SOColour {
+  color: #00ADB5;
+}
+
+.hpMargin {
+  margin-top: 7rem;
+}
+
+.TCO {
+  background-color: rgba(0, 173, 181, 0.5);
 }
 
 .tertiaryColor {
@@ -12062,10 +12107,6 @@ a:hover:not(.nav-link):not(.navbar-brand):not(.dropdown-item):not(.btn-success) 
 
 a:hover.text-white {
   color: #fff !important;
-}
-
-.TCO {
-  background-color: rgba(0, 173, 181, 0.5);
 }
 
 h1 {
@@ -12090,10 +12131,6 @@ h1 {
   background-attachment: fixed;
 }
 
-.SOColour {
-  color: #00ADB5;
-}
-
 .DSN {
   font-size: 2rem;
   color: #cccccc;
@@ -12106,10 +12143,6 @@ h1 {
   margin-bottom: 40px !important;
   margin-left: 10px;
   display: inline-block;
-}
-
-.hpMargin {
-  margin-top: 7rem;
 }
 
 .inner-form {
@@ -12137,12 +12170,54 @@ h1 {
   background-color: rgba(0, 0, 0, 0.7) !important;
 }
 
+.dropdown-item {
+  color: white;
+}
+
 .dropdown-item:hover {
   background-color: rgba(255, 255, 255, 0.5);
   color: black;
 }
 
-.dropdown-item {
-  color: white;
+nav input::-webkit-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ced4da !important;
+  opacity: 1;
+  /* Firefox */
+}
+
+nav input::-ms-input-placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ced4da !important;
+  opacity: 1;
+  /* Firefox */
+}
+
+nav input::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #ced4da !important;
+  opacity: 1;
+  /* Firefox */
+}
+
+nav input:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #ced4da !important;
+}
+
+nav input::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #ced4da !important;
+}
+
+.navbar-submit {
+  border-color: #ced4da !important;
+  color: #ced4da !important;
+  font-size: 1rem !important;
+  padding: 0.1rem 0.5rem !important;
+}
+
+.navbar-submit:hover {
+  color: #00ADB5 !important;
 }
 
